--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@reduxjs/toolkit": "^1.9.5",
     "autoprefixer": "10.4.14",
     "axios": "^1.5.0",
+    "country-flag-icons": "^1.5.9",
     "eslint": "^8.40.0",
     "eslint-config-next": "^13.4.1",
+    "framer-motion": "^10.16.5",
     "next": "^13.4.1",
-    "postcss": "8.4.23",
+    "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.12.0",
+    "react-intersection-observer": "^9.5.3",
     "react-redux": "^8.0.5",
+    "react-scroll": "^1.9.0",
     "sass": "^1.62.1",
     "tailwindcss": "3.3.2"
   }
