--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "next": "^13.4.1",
     "postcss": "^8.4.31",
     "react": "18.2.0",
+    "react-country-region-selector": "^3.6.1",
     "react-dom": "18.2.0",
+    "react-flag-kit": "^1.1.1",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.0.5",
     "react-scroll": "^1.9.0",
+    "react-select": "^5.8.0",
     "sass": "^1.62.1",
     "tailwindcss": "3.3.2"
   }
